// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Types Generator > generateTypes > should generate Context type with all operations 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string | null
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
}

export type UserUpdateInput = {
  name?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should generate CreateInput type 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type Post = {
  id: string
  title: string
  content: string | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title: string
  content?: string
}

export type PostUpdateInput = {
  title?: string
  content?: string
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
  content?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should generate UpdateInput type 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type Post = {
  id: string
  title: string
  content: string | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title: string
  content?: string
}

export type PostUpdateInput = {
  title?: string
  content?: string
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
  content?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should generate WhereInput type 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string | null
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
}

export type UserUpdateInput = {
  name?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should generate type definitions for basic model 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string
  email: string
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name: string
  email: string
}

export type UserUpdateInput = {
  name?: string
  email?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
  email?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should generate types for multiple lists 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string | null
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
}

export type UserUpdateInput = {
  name?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Post = {
  id: string
  title: string | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title?: string
}

export type PostUpdateInput = {
  title?: string
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Comment = {
  id: string
  content: string | null
  createdAt: Date
  updatedAt: Date
}

export type CommentCreateInput = {
  content?: string
}

export type CommentUpdateInput = {
  content?: string
}

export type CommentWhereInput = {
  id?: string
  AND?: Array<CommentWhereInput>
  OR?: Array<CommentWhereInput>
  NOT?: CommentWhereInput
  content?: { equals?: string, not?: string }
}

/**
 * Hook types for Comment list
 * Properly typed to use Prisma's generated input types
 */
export type CommentHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.CommentCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.CommentUpdateInput
        item: Comment
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.CommentCreateInput | Prisma.CommentUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.CommentCreateInput | Prisma.CommentUpdateInput
    item?: Comment
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.CommentCreateInput | Prisma.CommentUpdateInput
    item?: Comment
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.CommentCreateInput | Prisma.CommentUpdateInput
    item?: Comment
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should handle relationship fields in CreateInput 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type Post = {
  id: string
  title: string | null
  authorId: string | null
  author: User | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title?: string
  author?: { connect: { id: string } }
}

export type PostUpdateInput = {
  title?: string
  author?: { connect: { id: string } } | { disconnect: true }
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type User = {
  id: string
  name: string | null
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
}

export type UserUpdateInput = {
  name?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should handle relationship fields in UpdateInput 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type Post = {
  id: string
  title: string | null
  authorId: string | null
  author: User | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title?: string
  author?: { connect: { id: string } }
}

export type PostUpdateInput = {
  title?: string
  author?: { connect: { id: string } } | { disconnect: true }
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type User = {
  id: string
  name: string | null
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
}

export type UserUpdateInput = {
  name?: string
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;

exports[`Types Generator > generateTypes > should handle relationship fields in types 1`] = `
"/**
 * Generated types from OpenSaas configuration
 * DO NOT EDIT - This file is automatically generated
 */

import type { Session as OpensaasSession, StorageUtils, ServerActionProps, AccessControlledDB } from '@opensaas/stack-core'
import type { PrismaClient, Prisma } from './prisma-client/client'
import type { PluginServices } from './plugin-types'

export type User = {
  id: string
  name: string | null
  posts: Post[]
  createdAt: Date
  updatedAt: Date
}

export type UserCreateInput = {
  name?: string
  posts?: { connect: Array<{ id: string }> }
}

export type UserUpdateInput = {
  name?: string
  posts?: { connect: Array<{ id: string }>, disconnect: Array<{ id: string }> }
}

export type UserWhereInput = {
  id?: string
  AND?: Array<UserWhereInput>
  OR?: Array<UserWhereInput>
  NOT?: UserWhereInput
  name?: { equals?: string, not?: string }
}

/**
 * Hook types for User list
 * Properly typed to use Prisma's generated input types
 */
export type UserHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.UserCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.UserUpdateInput
        item: User
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.UserCreateInput | Prisma.UserUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.UserCreateInput | Prisma.UserUpdateInput
    item?: User
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Post = {
  id: string
  title: string | null
  authorId: string | null
  author: User | null
  createdAt: Date
  updatedAt: Date
}

export type PostCreateInput = {
  title?: string
  author?: { connect: { id: string } }
}

export type PostUpdateInput = {
  title?: string
  author?: { connect: { id: string } } | { disconnect: true }
}

export type PostWhereInput = {
  id?: string
  AND?: Array<PostWhereInput>
  OR?: Array<PostWhereInput>
  NOT?: PostWhereInput
  title?: { equals?: string, not?: string }
}

/**
 * Hook types for Post list
 * Properly typed to use Prisma's generated input types
 */
export type PostHooks = {
  resolveInput?: (args:
    | {
        operation: 'create'
        resolvedData: Prisma.PostCreateInput
        item: undefined
        context: import('@opensaas/stack-core').AccessContext
      }
    | {
        operation: 'update'
        resolvedData: Prisma.PostUpdateInput
        item: Post
        context: import('@opensaas/stack-core').AccessContext
      }
  ) => Promise<Prisma.PostCreateInput | Prisma.PostUpdateInput>
  validateInput?: (args: {
    operation: 'create' | 'update'
    resolvedData: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
    addValidationError: (msg: string) => void
  }) => Promise<void>
  beforeOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
  afterOperation?: (args: {
    operation: 'create' | 'update' | 'delete'
    resolvedData?: Prisma.PostCreateInput | Prisma.PostUpdateInput
    item?: Post
    context: import('@opensaas/stack-core').AccessContext
  }) => Promise<void>
}

export type Context<TSession extends OpensaasSession = OpensaasSession> = {
  db: AccessControlledDB<PrismaClient>
  session: TSession
  prisma: PrismaClient
  storage: StorageUtils
  plugins: PluginServices
  serverAction: (props: ServerActionProps) => Promise<unknown>
  sudo: () => Context<TSession>
  _isSudo: boolean
}"
`;
